# solwin

./: .gitignore  README.md  igF4Dj9gFf3zWhMPWckgnYjGv6wQbhpMH7ZM4n5Eyy3.json  package-lock.json  package.json  us1TNECrkMkRZPUhyecmBCC8i9JgDKzkuQyHrYYx2Ec.json  usdc.json
.nx/cache/: file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json
anchor/: .env  .env.example  .gitignore  Anchor.toml  package-lock.json  package.json
anchor/programs/solwin/: Cargo.toml
anchor/programs/solwin/src/: constants.rs  errors.rs  lib.rs
anchor/programs/solwin/src/helpers/: mod.rs  xorshift.rs
anchor/programs/solwin/src/instructions/: burn.rs  burn_and_withdraw.rs  buy_ticket.rs  close_round.rs  create_solwin.rs  create_tokens.rs  create_vault.rs  deposit.rs  deposit_and_mint.rs  f_burn_and_withdraw.rs  f_claim_lottery_rewards.rs  f_claim_rewards.rs  f_close_round.rs  f_deposit_and_mint.rs  f_init_lottery.rs  f_init_round.rs  f_init_solwin.rs  f_take_ticket.rs  init_lottery.rs  init_master_lottery.rs  init_round.rs  mint.rs  mod.rs  withdraw.rs
anchor/programs/solwin/src/state/: fvault.rs  master_lottery.rs  mod.rs  token.rs  vault.rs
anchor/src/: index.ts  solwin-exports.ts
anchor/tests/: basic.spec.ts  solawinBank.spec.ts  solwin.spec.ts  solwinAll.spec.ts  solwinEndToEnd.spec.ts  solwinLottery.spec.ts  solwinToken.spec.ts  solwinVault.spec.ts  testConstants.ts  testHelper.js  testHelper.ts  token.spec.ts  xorshift.spec.ts
app/: package.json
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-86301-D7G1ZmM3RCGZjd3xhx6LSRprhC7KJdXoGKuT9ACRku7i.tar.zst  snapshot-86401-6rmi8n8MaYzgdcc9Pn1JETZCeJt83BfgpGjB1xuwtjo6.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000060.sst  000255.sst  000260.sst  000261.sst  000272.sst  000315.sst  000316.sst  000317.sst  000318.sst  000319.sst  000322.sst  000323.sst  (+28 more)
web/: constants.ts  idl.json  tailwind.config.js
(+658 files in other folders)
