[package]
name = "solwin"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solwin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
solana-program = "2.0.0"
spl-token-lending = { git = "https://github.com/solana-labs/solana-program-library", branch = "master", features = ["no-entrypoint"] }