[package]
name = "solwin"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solwin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
spl-token-lending = ["no-entrypoint"]

[dependencies]
anchor-spl = "0.30.1"
anchor-lang = "0.30.1"
solana-program = "1.18.17"
spl-token-lending = "0.2.0"