[package]
name = "solwin"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solwin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
spl-token-lending = ["no-entrypoint"]

[dependencies]
anchor-spl = {version = "0.30.1", features = ["metadata"]}
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
solana-program = "1.18.17"
spl-token-lending = "0.2.0"
mpl-token-metadata = "3.2.3"
rand = "0.8"
# clockwork-sdk = { version = "2.0.15" } #"2.0.1"

# anchor-lang = "0.30.0"
# solana-program = "2.0.0"
# spl-token-lending = { git = "https://github.com/solana-labs/solana-program-library", branch = "master", features = ["no-entrypoint"] }